feat: Spring Boot upgrade to 3.3.13: initial commit: changes by Openrewrite plugin. Changed dependencies are verified and fixed according to prior migrated projects experience. Also: project version is changed to 3.0.0-SNAPSHOT, atp libraries dependencies are changed to ones already upgraded to Spring Boot 3.3.13.