@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -110,7 +110,7 @@ public class RerunService {
         List<TestRun> testRuns = testRunService.getTestRunsIdByExecutionRequestIdAndTestingStatuses(executionRequestId,
                 request.getStatuses());
         if (isEmpty(testRuns)) {
-            String message = String.format("Test Runs with statuses %s for rerun ER %s were not found.",
+            String message = "Test Runs with statuses %s for rerun ER %s were not found.".formatted(
                     request.getStatuses(), executionRequestId);
             log.error(message);
             throw new AtpException(message);
