@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -49,7 +49,7 @@ public class SetDefaultLabelVisibilityOnWidgetsV10 {
         ColumnVisibility labelColumn = new ColumnVisibility();
         labelColumn.setName(LABELS_COLUMN_NAME);
         labelColumn.setVisible(false);
-        String updateKey = String.format("widgets.%d.columnVisibilities", VISIBILITIES_WIDGET_POSITION);
+        String updateKey = "widgets.%d.columnVisibilities".formatted(VISIBILITIES_WIDGET_POSITION);
         Update update = new Update().push(updateKey, labelColumn);
 
         mongoTemplate.updateMulti(query, update, WidgetConfigTemplate.class);
