@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -49,7 +49,7 @@ public class WidgetModelFactory {
                 .filter(builder -> widgetType == builder.getType())
                 .findFirst();
 
-        log.debug(String.format("Model builder %s found for widget %s",
+        log.debug("Model builder %s found for widget %s".formatted(
                 matchedBuilder,
                 widgetType));
         return matchedBuilder;
