@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -39,18 +39,19 @@ import lombok.extern.slf4j.Slf4j;
 public class FreemarkerTemplateRenderService implements TemplateRenderService {
 
     private static final String HTML_WIDGET_DELIMETER = "<br/>";
-    private static final String HTML_ROOT_PREFIX = "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">\n"
-            + "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n"
-            + "<head>\n"
-            + "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=UTF-8\" />\n"
-            + "<title>Ram Email Report</title>\n"
-            + "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"/>\n"
-            + "<style>\n"
-            + "table, td, th {border-spacing: 0; border-collapse: collapse; padding: 0;} \n"
-            + "a {text-decoration: none; color: #0068FF}\n"
-            + "</style>\n"
-            + "</head>\n"
-            + " <body>";
+    private static final String HTML_ROOT_PREFIX = """
+            <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+            <html xmlns="http://www.w3.org/1999/xhtml">
+            <head>
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <title>Ram Email Report</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <style>
+            table, td, th {border-spacing: 0; border-collapse: collapse; padding: 0;}\s
+            a {text-decoration: none; color: #0068FF}
+            </style>
+            </head>
+             <body>""";
     private static final String HTML_ROOT_SUFFIX = "</body></html>";
     private Configuration freemarkerConfiguration;
     private ReportTemplatesService reportTemplatesService;
@@ -73,7 +74,7 @@ public class FreemarkerTemplateRenderService implements TemplateRenderService {
     @Override
     public String render(ReportTemplate reportTemplate, Map<WidgetType, Map<String, Object>> model) {
 
-        log.info(String.format("Start generating html report for the report template = %s and model = %s",
+        log.info("Start generating html report for the report template = %s and model = %s".formatted(
                 reportTemplate.getName(), model));
 
         Preconditions.checkNotNull(reportTemplate, "Report Template can not be null.");
@@ -84,13 +85,13 @@ public class FreemarkerTemplateRenderService implements TemplateRenderService {
                     try {
                         joiner.add(render(widget, model.get(widget)));
                     } catch (Exception e) {
-                        log.error(String.format("Error occurred while rendering report templateId = %s, widget = %s",
+                        log.error("Error occurred while rendering report templateId = %s, widget = %s".formatted(
                                 reportTemplate.getUuid(), widget.toString()), e);
                     }
                 }
         );
 
-        log.info(String.format("Html report generated for the report template = %s ,html = %s",
+        log.info("Html report generated for the report template = %s ,html = %s".formatted(
                 reportTemplate.getName(), joiner.toString()));
 
         return joiner.toString();
